# Moura-Stack-Training

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  project_structure_and_summary.txt  pyproject.toml  requirements.txt  start.py  vacancies-requirements  vacancies-requirements.txt
.serena/: project.yml
Junior-IT-Development-Analyst/: .env.example  .gitignore  README.md  README_EN.md  requirements.txt
Junior-IT-Development-Analyst/agile/: scrum-guide.md
Junior-IT-Development-Analyst/docs/: api_integration.md  especificacao_tecnica.md  treinamento_usuario.md
Junior-IT-Development-Analyst/figma/: design-system.md  wireframes.md
Junior-IT-Development-Analyst/sap/: sap_scripts.md
Junior-IT-Development-Analyst/sql/: 01_schema.sql  02_queries.sql  03_procedures.sql  04_triggers.sql  05_analytics.sql
Junior-IT-Development-Analyst/tests/: test_api.py  test_automation.py  test_ml.py  test_sql.sql
Moura-Internship/: .env.example  README_EN.md  docker-compose.yml  requirements.txt
Tests/: 1.ts  2.py
app/backend/: db.py  main.py
app/core/: reset_postgres.py  (+1 more)
data/: sample_sales.csv
dbt/: dbt_project.yml
moura-stack/: .env.example  Dockerfile  pyproject.toml  requirements.txt
moura-stack/app/backend/: db.py  main.py  models.py
moura-stack/app/backend/routers/: etl.py  gold.py  health.py  metrics.py  ml.py  stats.py
moura-stack/app/etl/: spark_job.py
moura-stack/dbt/models/: fct_sales.sql  schema.yml
moura-stack/tests/: test_stats_ml.py
sql/: 01_init.sql  02_reset_sales.sql
tests/: test_api.py
(+74 files in other folders)
