[build-system]
requires = ["setuptools>=68", "wheel"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","C4","SIM","RUF"]
ignore = ["E501"]
exclude = ["data","docker"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
